# flib-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  flib-config.cmake
.github/workflows/: linux-builds-dev.yml  linux-builds-ref.yml  linux-builds.yml  windows-builds-dev.yml  windows-builds-ref.yml  windows-builds.yml
examples/: CMakeLists.txt
examples/atomic_example/: CMakeLists.txt
examples/atomic_example/src/: main.cpp
examples/bit_example/: CMakeLists.txt
examples/bit_example/src/: main.cpp
examples/dll_example/: CMakeLists.txt
examples/dll_example/src/: main.cpp
examples/flags_example/: CMakeLists.txt
examples/flags_example/src/: main.cpp
examples/mld_example/: CMakeLists.txt
examples/mld_example/src/: main.cpp
examples/observable_example/: CMakeLists.txt
examples/observable_example/src/: main.cpp
examples/pluginApp/: CMakeLists.txt  Main.cpp  PluginManager.cpp  PluginManager.hpp  TestAPI.hpp
examples/pluginLib/: CMakeLists.txt  TestClass.cpp  TestClass.hpp
examples/timer_example/: CMakeLists.txt
examples/timer_example/src/: main.cpp
examples/timestamp_example/: CMakeLists.txt
examples/timestamp_example/src/: main.cpp
examples/uuid_example/: CMakeLists.txt
examples/uuid_example/src/: main.cpp
examples/waitQueueApp/: CMakeLists.txt  Main.cpp
examples/worker_example/: CMakeLists.txt
examples/worker_example/src/: main.cpp
flib/: Endianess.hpp  Executor.hpp  Observable.hpp  PluginManager.hpp  Plugins.hpp  Scheduler.hpp  Scriptler.hpp  SyncLock.hpp  Version.hpp  WaitQueue.hpp  atomic.hpp  binary.hpp  bit.hpp  dll.hpp  flags.hpp  flib-config.cmake  flib.hpp  json.hpp  mld.hpp  observable.hpp  pimpl.hpp  sync_guard.hpp  sync_queue.hpp  timer.hpp  timestamp.hpp  uuid.hpp  version.hpp  worker.hpp
scripts/: execute_tests.bat  execute_tests.sh
test_dll/: CMakeLists.txt  main.cpp
test_plugin/: CMakeLists.txt  iplugin.hpp  plugin.cpp  plugin.hpp
tests/: CMakeLists.txt  EndianessTests.cpp  ExecutorTests.cpp  Main.cpp  ObservableTests.cpp  SchedulerTests.cpp  ScriptlerTests.cpp  SyncLockTests.cpp  Tools.hpp  WaitQueueTests.cpp  atomic_tests.cpp  binary_tests.cpp  dll_tests.cpp  json_tests.cpp  main.cpp  observable_tests.cpp  sync_guard_tests.cpp  sync_queue_tests.cpp  testing.hpp  timer_tests.cpp  timestamp_tests.cpp  uuid_tests.cpp  worker_tests.cpp
tests/src/common/: redefinition_check.cpp
tests/src/suites/: atomic_tests.cpp  binary_tests.cpp  bit_tests.cpp  dll_tests.cpp  flags_test.cpp  json_tests.cpp  observable_tests.cpp  timer_tests.cpp  timestamp_tests.cpp  uuid_tests.cpp  worker_tests.cpp
