# Copyright © 2024 Luka Arnecic.
# See the LICENSE file at the top-level directory of this distribution.

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/atomic_example")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/bit_example")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/dll_example")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/flags_example")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/mld_example")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/observable_example")